--- a/package.json
+++ b/package.json
@@ -30,51 +30,10 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.6",
-    "@tippyjs/react": "^4.2.6",
-    "@tiptap-pro/extension-details": "2.10.11",
-    "@tiptap-pro/extension-details-content": "2.10.11",
-    "@tiptap-pro/extension-details-summary": "2.10.11",
-    "@tiptap-pro/extension-drag-handle": "^2.10.11",
-    "@tiptap-pro/extension-drag-handle-react": "^2.10.11",
-    "@tiptap-pro/extension-emoji": "^2.10.11",
-    "@tiptap-pro/extension-file-handler": "^2.10.11",
-    "@tiptap-pro/extension-table-of-contents": "^2.10.11",
-    "@tiptap/core": "^2.6.4",
-    "@tiptap/extension-bullet-list": "^2.6.4",
-    "@tiptap/extension-character-count": "^2.6.4",
-    "@tiptap/extension-collaboration": "^2.6.4",
-    "@tiptap/extension-collaboration-cursor": "^2.6.4",
-    "@tiptap/extension-color": "^2.6.4",
-    "@tiptap/extension-document": "^2.6.4",
-    "@tiptap/extension-dropcursor": "^2.6.4",
-    "@tiptap/extension-focus": "^2.6.4",
-    "@tiptap/extension-font-family": "^2.6.4",
-    "@tiptap/extension-heading": "^2.6.4",
-    "@tiptap/extension-highlight": "^2.6.4",
-    "@tiptap/extension-horizontal-rule": "^2.6.4",
-    "@tiptap/extension-image": "^2.6.4",
-    "@tiptap/extension-link": "^2.6.4",
-    "@tiptap/extension-ordered-list": "^2.6.4",
-    "@tiptap/extension-paragraph": "^2.6.4",
-    "@tiptap/extension-placeholder": "^2.6.4",
-    "@tiptap/extension-subscript": "^2.6.4",
-    "@tiptap/extension-superscript": "^2.6.4",
-    "@tiptap/extension-table": "^2.6.4",
-    "@tiptap/extension-table-header": "^2.6.4",
-    "@tiptap/extension-table-row": "^2.6.4",
-    "@tiptap/extension-task-item": "^2.6.4",
-    "@tiptap/extension-task-list": "^2.6.4",
-    "@tiptap/extension-text-align": "^2.6.4",
-    "@tiptap/extension-text-style": "^2.6.4",
-    "@tiptap/extension-typography": "^2.6.4",
-    "@tiptap/extension-underline": "^2.6.4",
-    "@tiptap/pm": "^2.6.4",
-    "@tiptap/react": "^2.6.4",
-    "@tiptap/starter-kit": "^2.6.4",
-    "@tiptap/suggestion": "^2.6.4",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.0.1",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -86,7 +45,7 @@
     "lucide-react": "^0.428.0",
     "nanoid": "^5.0.1",
     "next": "^14.2.5",
-    "next-intl": "^3.19.0",
+    "next-intl": "^3.26.3",
     "next-themes": "^0.2.1",
     "react": "^18.3.1",
     "react-colorful": "^5.6.1",
