--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "nanoid": "^5.0.1",
     "next": "^14.2.5",
     "next-intl": "^3.26.3",
+    "next-safe-action": "^7.10.2",
     "next-themes": "^0.2.1",
     "react": "^18.3.1",
     "react-colorful": "^5.6.1",
@@ -60,7 +61,7 @@
     "typescript": "5.1.6",
     "typewriter-effect": "^2.20.1",
     "uuid": "^10.0.0",
-    "zod": "^3.22.2",
+    "zod": "^3.24.1",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
